# banksinfo-checker

./: .gitignore  CMakeLists.txt  README.md
include/: banksinfo.hpp  flags.hpp
src/: CMakeLists.txt  banksinfo.cpp  flags.cpp  main.cpp
